--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,25 +13,31 @@
         android:textSize="30sp"
         android:textColor="#000000"
         android:gravity="center"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toTopOf="@id/login_id"
         android:text="로그인"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/textfield"
         app:layout_constraintBottom_toTopOf="@id/login_pw"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        android:hint="아이디"
+        android:padding="20dp"
+        android:layout_marginBottom="10dp"
+        android:hint="E-mail"
         android:id="@+id/login_id"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/textfield"
         app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
+        android:padding="20dp"
         android:hint="비밀번호"
         android:id="@+id/login_pw"/>
 
@@ -41,17 +47,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로그인"
+        android:background="@drawable/button"
+
+        android:layout_marginVertical="20dp"
+        android:textColor="#FFFFFF"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_pw" />
 
-    <Button
+    <TextView
         android:id="@+id/login_RegisterBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:textColor="#707070"
         android:text="회원가입"
+        android:gravity="center"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
