--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,17 +15,22 @@
         app:layout_constraintBottom_toTopOf="@id/register_id"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
+        android:background="@drawable/textfield"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintVertical_bias="0.693" />
 
     <EditText
         android:id="@+id/register_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="생성할 아이디"
+        android:hint="이메일"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
+        android:background="@drawable/textfield"
+        android:padding="10dp"
         app:layout_constraintVertical_bias="0.693" />
 
     <EditText
@@ -34,7 +39,10 @@
         app:layout_constraintTop_toBottomOf="@id/register_id"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        android:hint="생성할 비밀번호"
+        android:hint="비밀번호"
+        android:background="@drawable/textfield"
+        android:padding="10dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/register_pw"/>
 
     <EditText
@@ -43,7 +51,10 @@
         app:layout_constraintTop_toBottomOf="@id/register_pw"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        android:hint="비밀번호 재입력"
+        android:hint="비밀번호 확인"
+        android:background="@drawable/textfield"
+        android:padding="10dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/register_pw2"/>
 
     <DatePicker
