--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,18 +13,20 @@
     android:src="@drawable/logo"
         android:id="@+id/logo"
         />
+
     <TextView
+        android:id="@+id/quiz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
         android:text="QUIZ1"
         android:textColor="#001AFF"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        android:layout_marginTop="100dp"
         android:textFontWeight="900"
         android:textSize="33dp"
-        android:id="@+id/quiz"
-        ></TextView>
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        tools:layout_editor_absoluteX="0dp"></TextView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,9 +47,9 @@
         <Button
             android:stateListAnimator="@null"
             android:background="@drawable/radius_button"
-            android:shadowRadius="25dp"
             android:layout_width="292dp"
             android:layout_height="40dp"
+            android:id="@+id/quizBtn_1"
             android:text="정말 가능하다"
             />
     </LinearLayout>
@@ -61,9 +64,9 @@
         <Button
             android:stateListAnimator="@null"
             android:background="@drawable/radius_button"
-            android:shadowRadius="25dp"
             android:layout_width="292dp"
             android:layout_height="40dp"
+            android:id="@+id/quizBtn_2"
             android:text="정말 불가능하다"
             />
     </LinearLayout>
