--- a/app/src/main/res/layout/activity_quiz_answer.xml
+++ b/app/src/main/res/layout/activity_quiz_answer.xml
@@ -39,7 +39,7 @@
         android:text="adsasd\nasdsad\nasdasd"
         android:textColor="#000000"
         android:gravity="center"
-
+        android:id="@+id/mean"
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@+id/ment"
 
@@ -58,9 +58,9 @@
             android:background="@drawable/yellow_radius_button"
             android:textColor="#ffffff"
             android:textSize="15dp"
-            android:shadowRadius="25dp"
             android:layout_width="292dp"
             android:layout_height="40dp"
+            android:id="@+id/nextQuiz"
             android:text="다음문제로"
             />
     </LinearLayout>
