--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width ="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
-    android:padding="10dp">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width ="match_parent"
+android:layout_height="match_parent"
+tools:context=".RegisterActivity"
+android:padding="10dp">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@id/register_name"
+        android:text="회원가입"/>
 
     <EditText
         android:id="@+id/register_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="이름"
+        android:hint="이름을 입력해주세요"
         app:layout_constraintBottom_toTopOf="@id/register_id"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         android:background="@drawable/textfield"
         android:padding="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintVertical_bias="0.693" />
 
     <EditText
@@ -25,18 +36,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="이메일"
-        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/register_pw"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
         android:background="@drawable/textfield"
-        android:padding="10dp"
-        app:layout_constraintVertical_bias="0.693" />
+        android:layout_marginBottom="20dp"
+        android:padding="10dp" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/register_id"
+        app:layout_constraintBottom_toTopOf="@id/register_pw2"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         android:hint="비밀번호"
@@ -48,27 +58,32 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/register_pw"
-        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
         android:hint="비밀번호 확인"
         android:background="@drawable/textfield"
         android:padding="10dp"
         android:layout_marginBottom="20dp"
         android:id="@+id/register_pw2"/>
 
-    <DatePicker
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/register_pw2"
-        android:datePickerMode="spinner"
+        android:text="생일 입력"
         android:id="@+id/register_date"/>
 
     <Button
         android:id="@+id/login_RegisterBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="가입하기"
+        android:text="회원가입"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/button"
+        android:textColor="#FFFFFF"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_date" />
