--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,25 +19,25 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@drawable/textfield"
         app:layout_constraintBottom_toTopOf="@id/login_pw"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        android:padding="20dp"
+        android:paddingLeft="20dp"
         android:layout_marginBottom="10dp"
         android:hint="E-mail"
         android:id="@+id/login_id"/>
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@drawable/textfield"
         app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        android:padding="20dp"
+        android:paddingLeft="20dp"
         android:hint="비밀번호"
         android:id="@+id/login_pw"/>
 
