--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -21,7 +21,8 @@
         app:layout_constraintTop_toBottomOf="@id/f1_logo"
         android:drawableRight="@drawable/ic_search_24px"
         android:background="@drawable/search_field"
-        android:id="@+id/f1_search"/>
+        android:id="@+id/f1_search"
+        android:maxLines="1"/>
 
     <TextView
         android:layout_width="match_parent"
