--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -15,6 +15,7 @@
         />
 
     <TextView
+
         android:id="@+id/quiz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,40 +37,39 @@
         android:gravity="center"
         android:text="'쌉파서블'의 뜻은?"
         android:id="@+id/ment"
+        android:layout_marginBottom="10dp"
         />
-    <LinearLayout
-        android:layout_marginTop="14dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ment"
-        android:gravity="center"
-        >
+
         <Button
             android:stateListAnimator="@null"
             android:background="@drawable/radius_button"
             android:layout_width="292dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ment"
+            android:layout_marginTop="24dp"
             android:id="@+id/quizBtn_1"
             android:text="정말 가능하다"
             />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_marginTop="74dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ment"
-        android:gravity="center"
-        >
-        <Button
-            android:stateListAnimator="@null"
-            android:background="@drawable/radius_button"
-            android:layout_width="292dp"
-            android:layout_height="40dp"
-            android:id="@+id/quizBtn_2"
-            android:text="정말 불가능하다"
-            />
-    </LinearLayout>
+
+
+    <Button
+        android:stateListAnimator="@null"
+        android:background="@drawable/radius_button"
+        android:layout_width="292dp"
+        android:layout_height="45dp"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quizBtn_1"
+        android:layout_marginTop="24dp"
+        android:id="@+id/quizBtn_2"
+        android:text="정말 불가능하다"
+        />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
