--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -32,6 +32,7 @@
         android:text="오늘의 단어!"
         android:textColor="#FE8700"
         android:id="@+id/f1_label_today"
+        android:fontFamily="@font/nanumb"
         android:layout_marginVertical="20dp" />
 
     <View
@@ -50,6 +51,7 @@
         android:text="최촤촤촤"
         android:textColor="#000000"
         android:id="@+id/f1_Word"
+        android:fontFamily="@font/nanumeb"
         android:layout_marginVertical="10dp" />
 
     <TextView
@@ -60,6 +62,7 @@
         android:text=": 최애는 최애 차은우는 차은우"
         android:textColor="#000000"
         android:id="@+id/f1_WordMean"
+        android:fontFamily="@font/nanumb"
         android:layout_marginVertical="10dp" />
 
     <TextView
@@ -70,6 +73,7 @@
         android:text="차은우가 객관적으로 봐도 너무 잘생겨서 최애와는 별개로 차은우는 항상 좋아한다는 뜻"
         android:textColor="#000000"
         android:id="@+id/f1_WordDetail"
+        android:fontFamily="@font/nanumr"
         android:layout_marginVertical="5dp" />
 
     <View
@@ -99,6 +103,7 @@
                 android:textSize="25sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
+                android:fontFamily="@font/nanumeb"
                 android:text="랜덤 신조어 퀴즈"/>
             <TextView
                 android:layout_width="match_parent"
@@ -106,6 +111,7 @@
                 android:textSize="10sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
+                android:fontFamily="@font/nanumr"
                 android:text="무작위로 나오는 신조어 퀴즈들을 풀고\n
 나의 신조어 레벨을 알아보세요!"/>
 
@@ -131,6 +137,7 @@
                 android:textSize="25sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
+                android:fontFamily="@font/nanumeb"
                 android:text="OO님을 위한 퀴즈"/>
             <TextView
                 android:layout_width="match_parent"
@@ -138,6 +145,7 @@
                 android:textSize="10sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
+                android:fontFamily="@font/nanumr"
                 android:text="OO님이 검색하셨던 단어들 위주로 만들어진\n
 나만의 맞춤형 퀴즈를 풀어보세요!"/>
 
@@ -163,6 +171,7 @@
                 android:textSize="25sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
+                android:fontFamily="@font/nanumeb"
                 android:text="복습퀴즈"/>
             <TextView
                 android:layout_width="match_parent"
@@ -170,6 +179,7 @@
                 android:textSize="10sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
+                android:fontFamily="@font/nanumr"
                 android:text="OO님이 마지막으로 푸셨던 퀴즈들의\n
 답을 보며 복습해보세요!"/>
 
