--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:textColor="#000000"
         android:gravity="center"
         android:layout_marginBottom="50dp"
+        android:fontFamily="@font/nanumeb"
         app:layout_constraintBottom_toTopOf="@id/login_id"
         android:text="로그인"/>
 
@@ -27,6 +28,7 @@
         android:paddingLeft="20dp"
         android:layout_marginBottom="10dp"
         android:hint="E-mail"
+        android:fontFamily="@font/nanumr"
         android:id="@+id/login_id"/>
 
     <EditText
@@ -38,6 +40,7 @@
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         android:paddingLeft="20dp"
+        android:fontFamily="@font/nanumr"
         android:hint="비밀번호"
         android:id="@+id/login_pw"/>
 
@@ -47,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로그인"
+        android:fontFamily="@font/nanumr"
         android:background="@drawable/button"
 
         android:layout_marginVertical="20dp"
@@ -62,6 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:textColor="#707070"
+        android:fontFamily="@font/nanumr"
+        android:paddingTop="10dp"
         android:text="회원가입"
         android:gravity="center"
         app:layout_constraintHorizontal_bias="0.2"
