--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -25,6 +25,7 @@
         android:textColor="#001AFF"
         android:textFontWeight="900"
         android:textSize="33dp"
+        android:fontFamily="@font/nanumeb"
         app:layout_constraintTop_toBottomOf="@+id/logo"
         tools:layout_editor_absoluteX="0dp"></TextView>
 
@@ -36,6 +37,7 @@
         android:textColor="#000000"
         android:gravity="center"
         android:text="'쌉파서블'의 뜻은?"
+        android:fontFamily="@font/nanumr"
         android:id="@+id/ment"
         android:layout_marginBottom="10dp"
         />
@@ -45,6 +47,7 @@
             android:background="@drawable/radius_button"
             android:layout_width="292dp"
             android:layout_height="45dp"
+            android:fontFamily="@font/nanumr"
             app:layout_constraintRight_toLeftOf="parent"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ment"
@@ -60,6 +63,7 @@
         android:background="@drawable/radius_button"
         android:layout_width="292dp"
         android:layout_height="45dp"
+        android:fontFamily="@font/nanumr"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quizBtn_1"
