--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -36,6 +36,17 @@
         android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@+id/f2_profile" />
 
+    <TextView
+        android:id="@+id/f2_correctcount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="최근 맞힌 개수 : "
+        android:paddingHorizontal="20dp"
+        android:textColor="#000000"
+        android:textSize="15sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/f2_name" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,7 +55,7 @@
         android:textColor="#FFFFFF"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/f2_name"
+        app:layout_constraintTop_toBottomOf="@+id/f2_correctcount"
         android:text="로그아웃"
         android:id="@+id/logoutBtn"/>
 
