--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:hint="비밀번호"
         android:id="@+id/login_pw"/>
