--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         app:layout_constraintLeft_toRightOf="parent"
         android:paddingLeft="20dp"
         android:layout_marginBottom="10dp"
-        android:hint="E-mail"
+        android:hint="아이디"
         android:fontFamily="@font/nanumr"
         android:id="@+id/login_id"/>
 
